# faust

./: .gitlab-ci.yml  .gitmodules  CDashConfScript.cmake  CDashConfScriptLinux.cmake  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.old  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake  DESCRIPTION.txt  README-tests-ci-release.md  README.developer  README.developer.md  README.md  README.txt  TODOLIST.developer  TODOLIST.developper  faustTest.cmake  faustTestContinuous.cmake  headerCMakeList.txt  headerCPP.txt  headerMatlab.txt  license.txt  version_log.txt
cmd_line/: CMakeLists.txt
cmd_line/cmdline_function/: launch_hierarchical_fact.cpp  launch_palm4MSA.cpp
cmd_line/config_file/: hier_fact_config.xml  trans_hier_fact_config.xml
cmd_line/data/: hier_fact_data.txt
cmd_line/xml_tools/: faust_init_params_from_xml.h  faust_init_params_from_xml.hpp  xml_utils.cpp
faust_core/: CMakeLists.txt  faust_core.cpp  faust_core.h  faust_core.hpp  faust_core_algebra.cpp  faust_core_algebra.h  faust_core_algebra.hpp
faust_core/faust_core_cu/: CMakeLists.txt  faustCoreCu_2FaustCore.h  faustCoreCu_2FaustCore.hpp  faust_core.h  faust_core.hpp  faust_core_algebra.h  faust_core_algebra.hpp  faust_core_algebra_cu.h  faust_core_algebra_cu.hpp  faust_core_cu.h  faust_core_cu.hpp
gen_doc/: CMakeLists.txt  Doxyfile.in  Faust_creation.html  Faust_creation.ipynb  Faust_creation.mlx  Faust_creation.mlx.html  Faust_factorization.html  Faust_factorization.ipynb  Faust_factorization.mlx  Faust_factorization.mlx.html  Faust_factorization_exp_gft.ipynb  Faust_manipulation.html  Faust_manipulation.ipynb  Faust_manipulation.mlx  Faust_manipulation.mlx.html  Faust_optimizations.html  Faust_optimizations.ipynb  Faust_optimizations.mlx  Faust_optimizations.mlx.html  MHTP_algorithms.html  MHTP_algorithms.ipynb  MHTP_algorithms.mlx  MHTP_algorithms.mlx.html  Use_of_Faust_objects_in_algorithms.html  Use_of_Faust_objects_in_algorithms.ipynb  Use_of_Faust_objects_in_algorithms.mlx  Use_of_Faust_objects_in_algorithms.mlx.html  faq.md  faust_projectors.html  faust_projectors.ipynb  faust_projectors.mlx  faust_projectors.mlx.html  filterout_doxy_latex_tags.sh  filterout_excluded_classes.py  filterout_matlab_doxy_blocks.sh  filterout_sphinx_tags.sh  gen_matlab_inline_doc_from_doxy_blocks.sh  gen_pkg_dl_page.sh  install_pyfaust_in_venv.md  installation_README.odt  (+24 more)
gen_doc/LaTeX/: Faust.tex  Makefile  annexes.tex  chapExample.tex  chapFirstUse.tex  chapInstall.tex  chapInstallUnix.tex  chapInstallWindows.tex  chapIntroduction.tex  chapWorkingProgress.tex  getting-started-with-faust-toolbox.tex  gettingStartedFAuST-version2_0.tex  gettingStartedFAuST-version2_1.tex  notations.tex  paperbiblio.bib
gen_doc/bin_pkgs/: README_template.html  README_template.md
gen_doc/doxymatlab/: m2cpp.pl
gen_doc/images/: Thumbs.db  convert2jpg.m
init_from_matlab/: CMakeLists.txt  faust_init_from_matio.cpp  faust_init_from_matio.h  faust_init_from_matio_core.cpp  faust_init_from_matio_core.h  faust_init_from_matio_core.hpp  faust_init_from_matio_mat.cpp  faust_init_from_matio_mat.h  faust_init_from_matio_mat.hpp  faust_init_from_matio_params.cpp  faust_init_from_matio_params.h  faust_init_from_matio_params.hpp
init_from_matlab/test/: COMPILE  test.cpp  test_cell.cpp  test_initfaust_mat_vector.cpp
interface_matlab/: CMakeLists.txt  FAUST_compile.m  Makefile  faust_mex.cpp  mexHierarchical_fact.cpp  mexLoadFaust.cpp  mexLoadFaustBis.cpp  t_FAUST_hier.m  t_FAUST_palm.m  t_mexLoadFaust.m  test_faust_mex.m
interface_matlab/mex_functions/: faust_mex.cpp  mexFaust.cpp  mexHierarchical_fact.cpp  mexLoadFaust.cpp  mexPalm4MSA.cpp
interface_matlab/tools/: CMakeLists.txt  class_handle.hpp  matlab_faust.m  matlab_faust.m.in  mexFaustMat.cpp  mexFaustMat.h  tools_mex.cpp  tools_mex.h  tools_mex.hpp
matrix/: CMakeLists.txt  LinAlgebra.cpp  LinAlgebra.h  LinAlgebra.hpp  cblas_algebra.cpp  cblas_algebra.h  faust_constant.h  faust_constant.h.in  faust_linear_operator.h  faust_mat.cpp  faust_mat.h  faust_mat.hpp  faust_mat_generic.h  faust_spmat.cpp  faust_spmat.h  faust_spmat.hpp  faust_timer.cpp  faust_timer.h  faust_vec.cpp  faust_vec.h  faust_vec.hpp  prox.cpp  prox.h  prox.hpp  set_path.sh
matrix/matrix_cu/: CMakeLists.txt  LinAlgebra.h  LinAlgebra.hpp  LinAlgebra_cu.h  LinAlgebra_cu.hpp  Makefile  cblas_algebra.cpp  cblas_algebra.h  faust_constant.h  faust_constant.h.in  faust_cu2faust.h  faust_cu2faust.hpp  faust_cu_mat.cpp  faust_cu_mat.h  faust_cu_mat.hpp  faust_cu_reduce.cu  faust_cu_reduce.h  faust_cu_spmat.cpp  faust_cu_spmat.h  faust_cu_spmat.hpp  faust_cu_timer.cpp  faust_cu_timer.h  faust_cu_vec.h  faust_cu_vec.hpp  faust_cuda.cpp  faust_cuda.h  faust_cuda.hpp  faust_linear_operator.h  faust_mat.h  faust_mat.hpp  faust_mat_generic.h  faust_spmat.h  faust_spmat.hpp  faust_timer.cpp  faust_timer.h  faust_vec.h  faust_vec.hpp  prox.h  prox.hpp  prox_cu.h  (+1 more)
misc/demo/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  localize_src.m  run_all_demo.m  set_path.m  set_path.m.in
misc/test/: CMakeLists.txt  README.developper  gen_artificial_faust.m  gen_palm4MSA_case.m
palm4MSA/: CMakeLists.txt  \  faust_constraint.h  faust_constraint_generic.cpp  faust_constraint_generic.h  faust_constraint_generic.hpp  faust_constraint_int.cpp  faust_constraint_int.h  faust_constraint_int.hpp  faust_constraint_mat.cpp  faust_constraint_mat.h  faust_constraint_mat.hpp  faust_constraint_real.cpp  faust_constraint_real.h  faust_constraint_real.hpp  faust_constraint_type.h  faust_params.cpp  faust_params.h  faust_params.hpp  faust_params_palm.cpp  faust_params_palm.h  faust_params_palm.hpp  hierarchical_fact.cpp  hierarchical_fact.h  hierarchical_fact.hpp  palm4MSA.cpp  palm4MSA.h  palm4MSA.hpp  sparsePalm4MSA.cpp  sparsePalm4MSA.h  sparse_hierarchical_fact.cpp  sparse_hierarchical_fact.h  stopping_criterion.cpp  stopping_criterion.h  stopping_criterion.hpp
palm4MSA/palm4MSA_cu/: CMakeLists.txt  faust_constraint_generic.cpp  (+26 more)
test/: CMakeLists.txt  COMPILE  Makefile  gen_artificial_faust.m  gen_hierarchical_fact_case.m
(+1058 files in other folders)
